# ggp

./: .gitattributes  .gitignore  Bootstrap.ps1  CMakeLists.txt  Makefile  Makefile.config  TODO  TODO.txt  bootstrap.sh  conanfile.txt  ggp.sln
ggo2d/: CMakeLists.txt  Makefile  ggo2d.vcxproj  ggo2d.vcxproj.filters  ggo2dnonreg.vcxproj
ggo2d/src/: ggo_2d.h  ggo_blit.cpp  ggo_blit.h  ggo_canvas.cpp  ggo_canvas.h  ggo_color.h  ggo_fill.cpp  ggo_fill.h  ggo_image.cpp  ggo_image.h  ggo_image_format.h  ggo_layer.cpp  ggo_layer.h  ggo_pixel_buffer.cpp  ggo_pixel_buffer.h  ggo_pixel_buffer_format.h  ggo_pixel_rect.cpp  ggo_pixel_rect.h
ggo2d/test/: ggo_2d_nonreg.cpp  ggo_2d_nonreg.h  ggo_blend_nonreg.cpp  ggo_blit_nonreg.cpp  ggo_blur_nonreg.cpp  ggo_box_filter_nonreg.cpp  ggo_buffer_paint_nonreg.cpp  ggo_buffer_pixel_nonreg.cpp  ggo_canvas_nonreg.cpp  ggo_color_nonreg.cpp  ggo_coordinates_conversion_nonreg.cpp  ggo_crop_nonreg.cpp  ggo_fill_nonreg.cpp  ggo_gaussian_blur_nonreg.cpp  ggo_gaussian_nonreg.cpp  ggo_glow_nonreg.cpp  ggo_harmonic_surface_nonreg.cpp  ggo_image_format_nonreg.cpp  ggo_image_local_processing_nonreg.cpp  ggo_image_nonreg.cpp  ggo_interpolation_nonreg.cpp  ggo_kdtree_nonreg.cpp  ggo_layer_nonreg.cpp  ggo_low_discrepancy_sequences_nonreg.cpp  ggo_marching_squares_nonreg.cpp  ggo_mask_nonreg.cpp  ggo_mean_box_blur_nonreg.cpp  ggo_morphology_nonreg.cpp  ggo_paint_nonreg.cpp  ggo_paint_nonreg_old.cpp  ggo_pixel_buffer_nonreg.cpp  ggo_pixel_rect_nonreg.cpp  ggo_rle_image_nonreg.cpp  ggo_sampling_nonreg.cpp  ggo_scaling_nonreg.cpp  ggo_shape_sampling_nonreg.cpp  ggo_space_partitionning_nonreg.cpp  ggo_tree3d_nonreg.cpp  ggo_triangular_interpolation_nonreg.cpp
ggoanimation/: CMakeLists.txt
ggoanimation/player/: ggo_animation_player.cpp
ggoanimation/src/: ggo_animate_abc.cpp  ggo_path_abc.h
ggoanimation/test/: ggo_animation_nonreg.cpp  ggo_path_nonreg.cpp
ggocomputart/: CMakeLists.txt  Makefile  bmp2jpg.ps1  bmp2mp4.bat  bmp2mp4.ps1  bmp2mp4.sh  bmp2png.ps1  ggo_computart_anim.cpp  ggo_computart_animation.cpp  ggo_computart_bitmap.cpp  ggo_computart_bitmaps.cpp  ggo_computart_gpu.cpp  ggo_computart_realtime.cpp  ggocomputart.vcxproj  ggocomputart.vcxproj.filters  ggocomputartanim.vcxproj  ggocomputartbitmap.vcxproj  ggocomputartrealtime.cpp  ggocomputartrealtime.vcxproj  ggocomputartrealtime.vcxproj.filters  run.sh
ggocomputart/android/: .gitignore
ggocomputart/animation/: ggo_animate_abc.cpp  ggo_animate_abc.h  ggo_animator.cpp  ggo_animator.h  ggo_path_abc.h
ggocomputart/artists/: ggo_animation_artist_abc.cpp  ggo_animation_artist_abc.h  ggo_artist.cpp  ggo_artist.h  ggo_artist_abc.cpp  ggo_artist_abc.h  ggo_artist_ids.h  ggo_bitmap_artist_abc.cpp  ggo_bitmap_artist_abc.h  ggo_random_interpolator_abc.h
ggocomputart/scripts/: ProcessPictures.ps1  ProcessVideo.ps1  process_pictures.sh  process_video.sh
ggocomputart/src/: ggo_animation_artist.cpp  ggo_animation_artist.h  ggo_animation_artist_abc.cpp  ggo_animation_artist_abc.h  ggo_artist.cpp  ggo_artist.h  ggo_artist_ids.h  ggo_bitmap_artist_abc.cpp  ggo_bitmap_artist_abc.h  ggo_gpu_artist.cpp  ggo_gpu_artist.h  ggo_gpu_artist_abc.cpp  ggo_gpu_artist_abc.h  ggo_paint_artist.cpp  ggo_paint_artist.h  ggo_realtime_artist.cpp  ggo_realtime_artist.h  ggo_realtime_artist_abc.cpp  ggo_realtime_artist_abc.h  ggo_substeps_processing.h
ggocomputart/www/: analyticstracking.php  artist.php  artist_2d.js  artist_gl.js  contact.php  faq.html  gourdi.css  helpers.js  helpers.php  image.php  index.php  video.php
ggokernel/: CMakeLists.txt  Makefile  ggokernel.vcxproj  ggokernel.vcxproj.filters  ggokernelnonreg.vcxproj  ggokernelnonreg.vcxproj.filters
ggokernel/src/: ggo_array.h  ggo_array2d.h  ggo_best_match.h  ggo_buffer.h  ggo_buffer_access.h  ggo_buffer_iterator.h  ggo_color_stream.cpp  ggo_color_stream.h  ggo_container_helpers.h  ggo_data_fetcher.h  ggo_ease.h  ggo_helpers.h  ggo_io.h  ggo_kdtree.h  ggo_kernel.cpp  ggo_kernel.h  ggo_link.h  ggo_log.h  ggo_memory.h  ggo_random_interpolator_abc.h  ggo_rect_int.h  ggo_stdint.h  ggo_string_helpers.h  ggo_template_pointer.h  ggo_template_variadic.h  ggo_tree.h  ggo_tree3d.h  ggo_value.h  ggo_vec.h
ggokernel/test/: ggo_array2d_nonreg.cpp  ggo_array_nonreg.cpp  ggo_assign_nonreg.cpp  ggo_base_nonreg.cpp  ggo_best_match_nonreg.cpp  ggo_borders_nonreg.cpp  ggo_buffer_iterator_nonreg.cpp  ggo_circular_buffer_nonreg.cpp  ggo_compare_nonreg.cpp  ggo_coordinates_conversion_nonreg.cpp  ggo_file_helpers_nonreg.cpp  ggo_harmonics_nonreg.cpp  ggo_kernel_nonreg.cpp  ggo_kernel_nonreg.h  ggo_link_nonreg.cpp  ggo_log2_fract_nonreg.cpp  ggo_memory_layouts_nonreg.cpp  ggo_quadratic_nonreg.cpp  ggo_ratio_nonreg.cpp  ggo_rect_int_nonreg.cpp  ggo_reduce_nonreg.cpp  ggo_scalar_field2d_nonreg.cpp  ggo_template_pointer_nonreg.cpp  ggo_value_nonreg.cpp  ggo_vec_nonreg.cpp
ggokernel/tools/: best_candidate.cpp  halton.cpp
ggophysics/: CMakeLists.txt  ggophysics.vcxproj  ggophysics.vcxproj.filters  ggophysicsnonreg.vcxproj  ggophysicsui.vcxproj  ggophysicsui.vcxproj.filters
ggophysics/src/: ggo_collisions.cpp  ggo_collisions.h  ggo_impulse.cpp  ggo_impulse.h  ggo_intersections.cpp  ggo_intersections.h  ggo_physics.cpp  ggo_physics.h
ggophysics/test/: ggo_collisions_nonreg.cpp  ggo_contact_nonreg.cpp  ggo_intersections_nonreg.cpp  ggo_physics_nonreg.cpp
ggophysics/ui/: main.cpp
ggoraytracer/: CMakeLists.txt  Makefile  ggoraytracer.vcxproj  ggoraytracer.vcxproj.filters  ggoraytracernonreg.vcxproj
ggoraytracer/src/: ggo_object3d.cpp  ggo_object3d.h  ggo_raytracer.cpp  ggo_raytracer.h  ggo_raytracer_global.h  ggo_scene.cpp  ggo_scene.h
ggoraytracer/test/: ggo_bidirectional_lighting.cpp  ggo_caustics_nonreg.cpp  ggo_cylinder_nonreg.cpp  ggo_glow_nonreg.cpp  ggo_marching_cubes_nonreg.cpp  ggo_metaball_nonreg.cpp  ggo_octree_raycaster.cpp  ggo_parallelogram3d_nonreg.cpp  ggo_polygon3d_nonreg.cpp  ggo_raytracer_nonreg.cpp  ggo_rectangle3d_nonreg.cpp  ggo_scene1.cpp  ggo_scene2.cpp  ggo_scene3.cpp  (+5 more)
ggosymbolic/: CMakeLists.txt
ggovivelle/: CMakeLists.txt  ggovivelle.cpp
(+1456 files in other folders)
